--- a/src/includes/footer.ejs
+++ b/src/includes/footer.ejs
@@ -284,6 +284,47 @@
           </g>
         </svg>
       </div>
+      <div class="footer__wrapper-bottom-logo-mobile">
+        <svg viewBox="0 0 177 177" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <defs>
+              <radialGradient cx="49.8655914%" cy="49.9462366%" fx="49.8655914%" fy="49.9462366%" r="49.9193548%"
+                id="radialGradient-1">
+                <stop stop-color="#797979" offset="0%">
+                </stop>
+                <stop stop-color="#4C4C4C" offset="100%">
+                </stop>
+              </radialGradient>
+            </defs>
+            <g id="Browserstack_Logo_Monagram" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="Browserstack-logo" fill-rule="nonzero">
+                <circle id="Oval" fill="#F4B960" cx="88.5" cy="88.5" r="88.5">
+                </circle>
+                <circle id="Oval" fill="#E66F32" cx="80" cy="80" r="80">
+                </circle>
+                <circle id="Oval" fill="#E43C41" cx="90" cy="69" r="69">
+                </circle>
+                <circle id="Oval" fill="#BDD041" cx="95.5" cy="74.5" r="63.5">
+                </circle>
+                <circle id="Oval" fill="#6DB54C" cx="91" cy="79" r="59">
+                </circle>
+                <circle id="Oval" fill="#AEDAE6" cx="81.5" cy="70.5" r="49.5">
+                </circle>
+                <circle id="Oval" fill="#56B8DE" cx="90.5" cy="61.5" r="41.5">
+                </circle>
+                <circle id="Oval" fill="#00B1D5" cx="95.5" cy="67.5" r="36.5">
+                </circle>
+                <circle id="Oval" fill="url(#radialGradient-1)" cx="90" cy="72" r="31">
+                </circle>
+                <circle id="Oval" fill="#221F1F" cx="90" cy="72" r="31">
+                </circle>
+                <ellipse id="Oval" fill="#FFFFFF"
+                  transform="translate(102.180430, 60.765690) rotate(-65.831561) translate(-102.180430, -60.765690) "
+                  cx="102.18043" cy="60.7656904" rx="9.57121784" ry="6.21289579">
+                </ellipse>
+              </g>
+            </g>
+          </svg>
+      </div>
       <div class="footer__wrapper-bottom-text">
         <p class="footer__wrapper-bottom-text-about">Nightwatch was established in 2014 and since 2021 it is
           actively maintained at <a href="https://browserstack.com/" target="_blank" rel="noopener noreferrer">BrowserStack</a> with the
