--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -431,6 +431,14 @@
     padding: 11px 0px;
     max-width: 80px;
   }
+
+  .hero__action {
+    padding: 0 24px;
+  }
+
+  .hero__action-copy-command-text::before {
+    padding-right: 12px;
+  }
 }
 
 /* Hero Section end */
