Adding a new page - framework comparison

--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -369,6 +369,8 @@
                             <div class="collapse" id="resources-collapse">
                                 <ul class="btn-toggle-nav toggle-nav-inner">
                                     <li>
+                                        <a href="/guide/comparison-with-leading-frameworks.html">Comparison With Leading Frameworks</a>
+
                                         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#contributing-collapse" aria-expanded="false">
                                             <a>Contribute guide</a>
                                         </button>
