--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -189,7 +189,6 @@
   color: var(--text-color);
   font-size: var(--font-size-h1);
   font-weight: 900;
-  letter-spacing: 0.03em;
   line-height: var(--line-height-h1);
   text-align: center;
 }
@@ -592,7 +591,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  max-width: 1000px;
+  max-width: 80%;
 }
 
 .features__community-stats-wrapper {
@@ -804,7 +803,7 @@
   font-weight: 600;
   gap: 13px;
   line-height: var(--line-height-h7);
-  padding: 3px 23px 3px 20px;
+  padding: 4px 23px 4px 20px;
   text-decoration: none;
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -1206,6 +1205,7 @@
 }
 
 .comparison__content-image {
+  display: flex;
   background: var(--background-color);
   border-radius: 20px;
   border: 5px solid var(--border-color);
