revert svg id fixes; fix svg viewBox

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -2192,8 +2192,8 @@ function activeLink(urlPart) {
           </a>
           <a href="https://jestjs.io/" class="integration__content-link" target="_blank" rel="noopener noreferrer">
             <article class="integration__content-card">
-              <div class="integration__content-card-image" style="height: 65px;margin-top: -14px;">
-                <svg role="img" xmlns="http://www.w3.org/2000/svg" id="Layer_1" x="0" y="0" viewBox="0 0 600 600"
+              <div class="integration__content-card-image">
+                <svg role="img" xmlns="http://www.w3.org/2000/svg" id="Layer_1" viewBox="0 140 700 450"
                   shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
                   <title>Jest logo</title>
                   <path fill="#C21325" stroke="#FFF" stroke-width="20"
@@ -2222,9 +2222,9 @@ function activeLink(urlPart) {
                   xmlns:xlink="http://www.w3.org/1999/xlink" shape-rendering="geometricPrecision"
                   text-rendering="geometricPrecision">
                   <title>JUnit5 logo</title>
-                  <rect x="0.776001" width="60" height="60" fill="url(#pattern2junit)" />
+                  <rect x="0.776001" width="60" height="60" fill="url(#pattern1junit)" />
                   <defs>
-                    <pattern id="pattern2junit" patternContentUnits="objectBoundingBox" width="1" height="1">
+                    <pattern id="pattern1junit" patternContentUnits="objectBoundingBox" width="1" height="1">
                       <use xlink:href="#image0_1502_47435" transform="scale(0.001)" />
                     </pattern>
                     <image id="image0_1502_47435" width="1000" height="1000"
@@ -2637,8 +2637,8 @@ function activeLink(urlPart) {
               </a>
               <a href="https://jestjs.io/" class="integration__content-link" target="_blank" rel="noopener noreferrer">
                 <article class="integration__content-card">
-                  <div class="integration__content-card-image" style="height: 65px;margin-top: -14px;">
-                    <svg role="img" xmlns="http://www.w3.org/2000/svg" id="Layer_1" x="0" y="0" viewBox="0 0 600 600"
+                  <div class="integration__content-card-image">
+                    <svg role="img" xmlns="http://www.w3.org/2000/svg" id="Layer_1" viewBox="0 140 700 450"
                       shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
                       <title>Jest logo</title>
                       <path fill="#C21325" stroke="#FFF" stroke-width="20"
@@ -2716,26 +2716,26 @@ function activeLink(urlPart) {
                     <svg width="61" height="60" viewBox="0 0 61 60" fill="none" xmlns="http://www.w3.org/2000/svg"
                       shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
                       <title>JSON logo</title>
-                      <g clip-path="url(#clip0_1828_311702)">
+                      <g clip-path="url(#clip0_1828_31170)">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M30.7254 44.6625C43.9996 62.7581 56.9904 39.6116 56.9713 25.6924C56.9487 9.23511 40.2684 0.0371094 30.7145 0.0371094C15.38 0.0371094 0.776001 12.7106 0.776001 30.0506C0.776001 49.3241 17.516 60 30.7145 60C27.7278 59.5699 17.7748 57.4372 17.6409 34.5124C17.5509 19.0072 22.6989 12.8126 30.6928 15.5377C30.8718 15.6041 39.5105 19.0119 39.5105 30.1444C39.5105 41.2294 30.7254 44.6625 30.7254 44.6625Z"
-                          fill="url(#paint0_linear_1828_311702)" />
+                          fill="url(#paint0_linear_1828_31170)" />
                         <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M30.7096 15.5254C21.9384 12.5022 11.1935 19.7314 11.1935 34.2113C11.1935 57.8543 28.7139 60 30.8375 60C46.172 60 60.776 47.3265 60.776 29.9865C60.776 10.713 44.036 0.0371735 30.8375 0.0371735C34.493 -0.469077 50.5404 3.99342 50.5404 25.926C50.5404 40.2289 38.558 48.0154 30.7647 44.6884C30.5857 44.622 21.947 41.2142 21.947 30.0818C21.947 18.9968 30.7096 15.525 30.7096 15.525V15.5254Z"
-                          fill="url(#paint1_linear_1828_311702)" />
+                          fill="url(#paint1_linear_1828_31170)" />
                       </g>
                       <defs>
-                        <linearGradient id="paint0_linear_1828_311702" x1="9.64951" y1="8.87363" x2="51.9132" y2="51.1508"
+                        <linearGradient id="paint0_linear_1828_31170" x1="9.64951" y1="8.87363" x2="51.9132" y2="51.1508"
                           gradientUnits="userSpaceOnUse">
                           <stop />
                           <stop offset="1" stop-color="white" />
                         </linearGradient>
-                        <linearGradient id="paint1_linear_1828_311702" x1="51.9192" y1="51.1449" x2="9.65542" y2="8.87151"
+                        <linearGradient id="paint1_linear_1828_31170" x1="51.9192" y1="51.1449" x2="9.65542" y2="8.87151"
                           gradientUnits="userSpaceOnUse">
                           <stop />
                           <stop offset="1" stop-color="white" />
                         </linearGradient>
-                        <clipPath id="clip0_1828_311702">
+                        <clipPath id="clip0_1828_31170">
                           <rect width="60" height="60" fill="white" transform="translate(0.776001)" />
                         </clipPath>
                       </defs>
