feat: add mobile nav in header

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -113,7 +113,7 @@ function activeLink(urlPart) {
 
   <body class="body">
     <!-- Navbar start -->
-    <%- include("navbar") %>
+    <%- include("navbar", data) %>
     <!-- Navbar end -->
 
     <main>
