--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -2,6 +2,10 @@
   font-family: var(--font-family-primary);
 }
 
+.body.overflow-hidden {
+  overflow: hidden;
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -51,7 +55,8 @@
   padding: 28px 26px 28px 26px;
 }
 
-.navigation-list-pages .navigation-link:hover,  .navigation-link.active {
+.navigation-list-pages .navigation-link:hover,
+.navigation-link.active {
   border-bottom: 3px solid var(--button-border-accent-color);
   color: var(--header-text-color)
 }
@@ -79,9 +84,9 @@
   fill: var(--background-color);
 }
 
-.navigation-list:last-child {
+.navigation-list:last-of-type {
   gap: 32px;
-  padding-left: 26px;
+  padding-left: 52px;
 }
 
 .navigation-list>li button {
@@ -174,12 +179,80 @@
   box-shadow: unset;
 }
 
+.navigation-menu-toggle {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  display: none;
+}
+
+.hamburger path {
+  fill: none;
+  stroke: var(--background-color);
+  stroke-linecap: round;
+}
+
+.mobile-navbar-content {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  background: var(--background-color);
+  display: none;
+}
+
+.mobile-navbar-wrapper {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  padding: 113px 32px;
+}
+
+.mobile-navbar-wrapper ul {
+  width: 100%;
+  padding: 0;
+}
+
+.mobile-navbar-wrapper li {
+  display: block;
+  font-weight: 500;
+  font-size: var(--font-size-h7);
+  line-height: var(--line-height-h7-xs);
+  color: var(--text-color);
+  padding: 16px 0;
+  border-bottom: 1px solid var(--card-border-color);
+}
+
+.mobile-navbar-wrapper li::before {
+  content: '';
+  padding: 6px;
+}
+
+.mobile-navbar-wrapper li a {
+  color: initial;
+  text-decoration: none;
+}
+
+.mobile-navbar-wrapper li a>span {
+  color: var(--text-color-accent);
+  font-style: italic;
+}
+
 @media (max-width: 1024px) {
   .navigation-list:first-of-type {
     display: none;
   }
+
   .navigation-list:last-of-type li:not(:first-of-type) {
     display: none;
+  }
+
+  .navigation-menu-toggle {
+    display: block;
+    margin-left: 20px;
   }
 }
 
@@ -443,7 +516,7 @@
   }
 
   .hero__action-copy-command-button {
-    font-size:  var(--font-size-h8);
+    font-size: var(--font-size-h8);
     padding: 11px 0px;
     max-width: 80px;
   }
@@ -2049,7 +2122,7 @@
   }
 
   .call-to-action-content-action-copy-command-button {
-    font-size:  var(--font-size-h8);
+    font-size: var(--font-size-h8);
     padding: 10px 0px;
     max-width: 80px;
   }
@@ -2302,7 +2375,7 @@
     flex-wrap: wrap;
     gap: 42px;
   }
-  
+
   .footer__wrapper-inner-menu>ul>li {
     flex-basis: 40%;
   }
@@ -2325,4 +2398,5 @@
     width: 35%;
   }
 }
+
 /* Footer section end */
