chore: fix mobile navbar links

--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -183,10 +183,10 @@
   <nav class="mobile-navbar-content" aria-label="Mobile Navigation">
     <div class="mobile-navbar-wrapper">
       <ul>
-        <li><a href="<%= activeLink('/guide') %>">Guide</a></li>
-        <li><a href="<%= activeLink('/api') %>">API</a></li>
-        <li><a href="<%= activeLink('/about') %>">Community</a></li>
-        <li><a href="<%= activeLink('/blog') %>">Blog</a></li>
+        <li><a href="/guide/overview/what-is-nightwatch.html">Guide</a></li>
+        <li><a href="/api/">API</a></li>
+        <li><a href="/about/community/">Community</a></li>
+        <li><a href="/blog">Blog</a></li>
         <li><a href="https://github.com/nightwatchjs/">Github</a></li>
         <li><a href="https://discord.com/invite/SN8Da2X">Discord</a></li>
         <li><a href="/guide/overview/whats-new.html">Release Notes <span>(Current version <%= version.substring(0, version.length - 2) %>)</span></a></li>
