--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -112,7 +112,7 @@
           </svg>
         </a>
       </div>
-      <ul class="navigation-list-pages">
+      <ul class="navigation-list">
         <li><a class="navigation-link <%= activeLink('/guide') %>"
             href="/guide/overview/what-is-nightwatch.html">Guide</a></li>
         <li><a class="navigation-link <%= activeLink('/api') %>" href="/api/">API</a></li>
