--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -604,7 +604,7 @@
 .features__content-wrapper-description-title {
   color: var(--feature-title-text-color);
   font-size: var(--font-size-h6);
-  font-weight: 500;
+  font-weight: 600;
   line-height: var(--line-height-h6);
 }
 
@@ -615,6 +615,7 @@
   flex-direction: column;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-s);
+  padding-inline-start: 26px;
 }
 
 .features__content-wrapper-description-list-item {
@@ -855,7 +856,7 @@
   font-size: var(--font-size-h5);
   font-weight: 700;
   line-height: var(--line-height-h5);
-  margin-bottom: 24px;
+  margin-bottom: 19px;
 }
 
 .capabilities--single-column .capabilities__card .capabilities__card-text {
