--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -353,6 +353,13 @@
   max-width: 145px;
 }
 
+.hero__action-copy-command-button.active {
+  background: var(--button-background-color-light);
+  border: 1px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
+  color: var(--text-color);
+}
+
 .hero__action-copy-command-button:hover {
   background: var(--button-background-color-light);
   border: 1px solid var(--button-border-color);
@@ -2040,6 +2047,13 @@
   top: -2px;
   width: 100%;
   max-width: 145px;
+}
+
+.call-to-action-content-action-copy-command-button.active {
+  background: var(--button-background-color-light);
+  border: 2px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
+  color: var(--text-color);
 }
 
 .call-to-action-content-action-copy-command-button:hover {
