--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -501,7 +501,9 @@
   }
 
   .hero__companies {
-    padding: 22px 22px;
+    padding: 10px 0;
+    --layout-content-width: 400px;
+    max-width: min(var(--layout-content-width), 84%);
   }
 
   .hero__companies__text {
@@ -509,12 +511,21 @@
     line-height: var(--line-height-base);
   }
 
-  .hero__companies__logos a img {
+  .hero__companies__logos {
+    padding-top: 23px;
+  }
+
+  .hero__companies__logos img {
     width: 100px;
     height: 100%;
   }
 
-  .hero__companies__logos a:nth-child(2) {
+  .hero__companies__logos img:first-child {
+    scale: 0.89;
+    transform: translateY(5px);
+  }
+
+  .hero__companies__logos img:nth-child(3) {
     display: none;
   }
 }
@@ -677,7 +688,7 @@
   width: 100%;
   border: 5px solid var(--border-color);
   border-radius: 20px;
-  padding: 40px 0;
+  padding: 39px 0;
   margin: auto;
 }
 
@@ -695,15 +706,11 @@
   max-width: 80%;
 }
 
-.features__community-stats-wrapper {
-  padding-bottom: 8px;
-}
-
 .features__community-stats-wrapper__heading {
   color: var(--feature-title-text-color);
-  font-size: var(--font-size-h4);
+  font-size: var(--font-size-h3);
   font-weight: 700;
-  line-height: var(--line-height-h4);
+  line-height: var(--line-height-h3);
   text-align: center;
 }
 
@@ -718,7 +725,7 @@
 @media (max-width: 480px) {
   .features {
     max-width: 30rem;
-    margin-top: 32px;
+    margin-top: 50px;
     margin-bottom: 60px
   }
 
@@ -745,6 +752,10 @@
     font-size: var(--font-size-h7-mega);
     line-height: var(--font-size-h7-mega);
     padding-left: 59px;
+  }
+
+  .features__content-wrapper-heading::before {
+    padding-right: 16px;
   }
 
   .features__content-wrapper-description {
