fix guide page styling

--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -9,9 +9,11 @@
                 -->
                 <div class="clearfix">
                     <button class="btn btn-link d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#doc-sidebar-nav" aria-controls="doc-sidebar-nav" aria-expanded="false" aria-label="Toggle docs navigation">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false"><title>Menu</title><path stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                                                                                                                                      stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-border-width" viewBox="0 0 16 16">
+                            <path d="M0 3.5A.5.5 0 0 1 .5 3h15a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-2zm0 5A.5.5 0 0 1 .5 8h15a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1zm0 4a.5.5 0 0 1 .5-.5h15a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5z"/>
+                          </svg>
                     </button>
+                    <span class="mobile-sidebar-title">Guide pages</span>
                 </div>
 
                 <nav class="doc-links collapse clearfix nav-fix" id="doc-sidebar-nav">
