--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -83,6 +83,10 @@
   position: sticky;
 }
 
+.mobile-sidebar-title {
+  display: none;
+}
+
 @media only screen and (max-width: 767px) {
   .doc-sidebar {
     border: none;
@@ -95,9 +99,14 @@
 
   .doc-sidebar .btn {
     color: #fff;
-    background: #2a2a2a;
+    background: #502d17;
     margin: 0 15px;
-    padding: 2px 5px;
+    padding: 5px 5px;
+    border-radius: 50%;
+  }
+
+  .mobile-sidebar-title {
+    display: inline;
   }
 }
 
