--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,46 +35,263 @@ a {
   text-decoration: none;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  background: var(--header-background);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  /* TODO: remove z-index and fix natively */
+  z-index: 100;
+}
+
+/* Navigation section start */
 .navigation__logo {
-  width: 230px;
+  width: 242px;
   margin-right: auto;
+  padding: 14px 0;
 }
 
-.navbar {
-  margin-top: 0;
+.navigation__logo svg {
+  width: 100%;
+  height: 100%;
 }
 
-.navbar-brand {
-  height: auto;
+.navigation {
+  align-items: center;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: min(1400px, 90%);
 }
 
-.nav-box {
-  margin-top: 23px;
-}
-
-.nav>li>a {
-  padding: 4px 9px;
-  font-size: 14px;
-  line-height: 1.5;
-  text-decoration: none !important;
-  font-family: var(--font-family-two);
+.navigation-list-pages {
+  align-items: center;
+  display: flex;
+  list-style: none;
   margin: 0;
+  padding: 0;
 }
 
-.nav>li>a:hover {
-  color: #fff;
-  background: none;
+.navigation-list-pages .navigation-link {
+  color: var(--header-text-color);
+  font-size: initial;
+  font-weight: 600;
+  line-height: var(--line-height-19);
+  text-decoration: none;
+  padding: 28px 26px 28px 26px;
 }
 
-.nav>li>a:focus {
-  color: #fff;
-  background: none;
+.navigation-link:hover {
+  color: var(--header-text-color);
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
+a.navigation-link.active {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
 
-#gettingstarted-container {
+.navigation-list {
+  align-items: center;
+  display: flex;
+  gap: 52px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation-link {
+  color: var(--header-text-color);
+  font-size: initial;
+  font-weight: 600;
+  line-height: var(--line-height-19);
+  text-decoration: none;
+}
+
+.navigation-list>li>a svg {
+  width: 30px;
+  height: 100%;
+  fill: var(--background-color);
+}
+
+.navigation-list:last-of-type {
+  gap: 32px;
+  padding-left: 50px;
+}
+
+.navigation-list>li button {
+  font-weight: 700;
+  font-size: var(--font-size-h7);
+  line-height: var(--line-height-h7-xs);
+  color: var(--text-color-light);
+  background: transparent;
+  border: unset;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 11px;
+}
+
+.navigation-list .release-button-action {
   position: relative;
 }
+
+.navigation-list>li [role="menu"] {
+  display: none;
+  position: absolute;
+  margin: 0;
+  background: var(--dropdown-background-color);
+  box-shadow: 3px 4px 7px 1px var(--dropdown-box-shadow-color);
+  border-radius: 10px;
+  padding: 21px 25px;
+  width: max-content;
+  left: -90px;
+  top: 45px;
+}
+
+.navigation-list>li [role="menu"] li:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.navigation-list>li>ul [role="menuitem"] {
+  display: block;
+  border-radius: 5px;
+}
+
+.navigation-list>li>ul [role="menuitem"] a {
+  font-weight: 600;
+  font-size: initial;
+  /* TODO: replace with var */
+  line-height: calc(19/16);
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.navigation-list>li>ul [role="menuitem"] a:hover {
+  text-decoration: underline;
+}
+
+#docsearch>svg {
+  width: 24px;
+  height: 24px;
+  stroke-width: 1.6;
+  color: var(--background-color);
+  cursor: pointer;
+}
+
+#docsearch .DocSearch-Button-Placeholder {
+  display: none;
+}
+
+#docsearch .DocSearch-Button-Keys {
+  display: none;
+}
+
+#docsearch button {
+  background: unset;
+  border-radius: unset;
+  margin: unset;
+  padding: unset;
+}
+
+#docsearch button span.DocSearch-Button-Container {
+  width: 24px;
+  height: 24px;
+}
+
+#docsearch button .DocSearch-Button-Container>svg {
+  --docsearch-text-color: var(--background-color);
+  width: 100%;
+  height: 100%;
+}
+
+#docsearch>button:hover {
+  box-shadow: unset;
+}
+
+.navigation-menu-toggle {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  display: none;
+}
+
+.hamburger path {
+  fill: none;
+  stroke: var(--background-color);
+  stroke-linecap: round;
+}
+
+.mobile-navbar-content {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: var(--background-color);
+  display: none;
+}
+
+.mobile-navbar-wrapper {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  padding: 113px 32px;
+}
+
+.mobile-navbar-wrapper ul {
+  width: 100%;
+  padding: 0;
+}
+
+.mobile-navbar-wrapper li {
+  display: block;
+  font-weight: 500;
+  font-size: var(--font-size-h7);
+  line-height: var(--line-height-h7-xs);
+  color: var(--text-color);
+  padding: 16px 0;
+  border-bottom: 1px solid var(--card-border-color);
+}
+
+.mobile-navbar-wrapper li::before {
+  content: '';
+  padding: 6px;
+}
+
+.mobile-navbar-wrapper li a {
+  color: initial;
+  text-decoration: none;
+}
+
+.mobile-navbar-wrapper li a>span {
+  color: var(--text-color-accent);
+  font-style: italic;
+}
+
+@media (max-width: 1024px) {
+  .navigation-list:first-of-type {
+    display: none;
+  }
+
+  .navigation-list:last-of-type li:not(:first-of-type) {
+    display: none;
+  }
+
+  .navigation-menu-toggle {
+    display: block;
+    margin-left: 20px;
+  }
+}
+
+/* Navigation section end */
+
 
 .nw-navbar {
   position: sticky;
@@ -90,6 +307,11 @@ a {
 .nw-navbar .container {
   width: 100%;
 }
+
+#gettingstarted-container {
+  position: relative;
+}
+
 
 [data-uri^="/api/$method"] body.navbar-visible .bs-sidebar,
 [data-uri^="/api/commands"] body.navbar-visible .bs-sidebar {
@@ -2126,6 +2348,23 @@ section.secondary h1 {
   line-height: 1.3;
 }
 
+@media (max-width: 480px) {
+  .doc-container.top-border .doc-sidebar {
+    border-radius: 0;
+  }
+
+  .mobile-sidebar-title {
+    font-weight: bold;
+    color: #595959;
+  }
+
+  section.secondary h2,
+  section.secondary h1 {
+    margin: 0;
+    padding: 0;
+  }
+}
+
 section.secondary h1.community-support-title {
   position: absolute;
   top: 200px;
@@ -2518,6 +2757,10 @@ p.bottom-text {
   .bs-sidebar .nav {
     width: 80%;
   }
+
+  .whatis-logo.w3c-logo {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -2715,6 +2958,7 @@ p.bottom-text {
   margin-bottom: 1.5rem;
 }
 
+
 /* Footer section start */
 .footer-landing {
   background: var(--footer-background-color);
@@ -2728,7 +2972,7 @@ p.bottom-text {
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
-  max-width: var(--layout-content-width);
+  max-width: min(var(--layout-content-width), 90%);
   padding-bottom: 50px;
   padding-top: 84px;
   width: 100%;
@@ -2886,6 +3130,7 @@ p.bottom-text {
   font-feature-settings: 'salt'on;
   font-size: var(--font-size-h8);
   font-weight: 600;
+  /* TODO: convert to var */
   line-height: calc(33 / 14);
   padding: 5px 17px;
   position: absolute;
@@ -2929,8 +3174,7 @@ p.bottom-text {
   color: var(--button-background-color-dark);
   font-size: initial;
   font-weight: 600;
-  /* TODO: convert to var */
-  line-height: calc(24 / 16);
+  line-height: var(--line-height-base);
   opacity: 0.9;
 }
 
@@ -2943,169 +3187,48 @@ p.bottom-text {
 .footer__wrapper-bottom-text-about {
   padding-bottom: 32px;
 }
+
+.footer__wrapper-bottom-logo-mobile {
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .footer-landing {
+    border-radius: 0px;
+    margin: 0;
+  }
+
+  .footer__wrapper {
+    padding-top: 60px;
+    padding-bottom: 0px;
+  }
+
+  .footer__wrapper-inner-menu>ul {
+    flex-wrap: wrap;
+    gap: 42px;
+  }
+
+  .footer__wrapper-inner-menu>ul>li {
+    flex-basis: 40%;
+  }
+
+  .footer__wrapper-inner {
+    gap: 45px;
+    padding-bottom: 34px;
+  }
+
+  .footer__wrapper-bottom {
+    gap: 30px;
+    padding: 40px 0;
+  }
+
+  .footer__wrapper-bottom-logo {
+    display: none;
+  }
+
+  .footer__wrapper-bottom-logo-mobile {
+    width: 35%;
+  }
+}
+
 /* Footer section end */
-
-.header {
-  display: flex;
-  justify-content: center;
-  background: var(--header-background);
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  /* TODO: remove z-index and fix natively */
-  z-index: 100;
-}
-
-/* Navigation section start */
-.navigation__logo {
-  width: 242px;
-  margin-right: auto;
-  padding: 14px 0;
-}
-
-.navigation__logo svg {
-  width: 100%;
-  height: 100%;
-}
-
-.navigation {
-  align-items: center;
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  max-width: min(1400px, 90%);
-}
-
-
-.navigation-list-pages {
-  align-items: center;
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navigation-list-pages .navigation-link {
-  color: var(--header-text-color);
-  font-size: 16px;
-  font-family: "Source Sans 3", sans-serif;
-  font-weight: 600;
-  line-height: var(--line-height-19);
-  text-decoration: none;
-  padding: 28px 26px 28px 26px;
-}
-
-.navigation-link:hover {
-  color: var(--header-text-color);
-  text-decoration: underline;
-  text-underline-offset: 4px;
-}
-
-a.navigation-link.active {
-  text-decoration: underline;
-  text-underline-offset: 4px;
-}
-
-.navigation-list>li>a svg {
-  width: 30px;
-  height: 100%;
-  fill: var(--background-color);
-}
-
-.navigation-list:last-child {
-  gap: 32px;
-  padding-left: 26px;
-}
-
-.navigation-list>li button {
-  font-weight: 700;
-  font-size: var(--font-size-h7);
-  line-height: var(--line-height-h7-xs);
-  color: var(--text-color-light);
-  background: transparent;
-  border: unset;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 11px;
-}
-
-.navigation-list .release-button-action {
-  position: relative;
-}
-
-.navigation-list>li [role="menu"] {
-  display: none;
-  position: absolute;
-  margin: 0;
-  background: var(--dropdown-background-color);
-  box-shadow: 3px 4px 7px 1px var(--dropdown-box-shadow-color);
-  border-radius: 10px;
-  padding: 21px 25px;
-  width: max-content;
-  left: -90px;
-  top: 45px;
-}
-
-.navigation-list>li [role="menu"] li:not(:last-child) {
-  margin-bottom: 16px;
-}
-
-.navigation-list>li>ul [role="menuitem"] {
-  display: block;
-  border-radius: 5px;
-}
-
-.navigation-list>li>ul [role="menuitem"] a {
-  font-weight: 600;
-  font-size: initial;
-  /* TODO: replace with var */
-  line-height: calc(19/16);
-  color: var(--text-color);
-  text-decoration: none;
-}
-
-.navigation-list>li>ul [role="menuitem"] a:hover {
-  text-decoration: underline;
-}
-
-#docsearch>svg {
-  width: 24px;
-  height: 24px;
-  stroke-width: 1.6;
-  color: var(--background-color);
-  cursor: pointer;
-}
-
-#docsearch .DocSearch-Button-Placeholder {
-  display: none;
-}
-
-#docsearch .DocSearch-Button-Keys {
-  display: none;
-}
-
-#docsearch button {
-  background: unset;
-  border-radius: unset;
-  margin: unset;
-  padding: unset;
-}
-
-#docsearch button span.DocSearch-Button-Container {
-  width: 24px;
-  height: 24px;
-}
-
-#docsearch button .DocSearch-Button-Container>svg {
-  --docsearch-text-color: var(--background-color);
-  width: 100%;
-  height: 100%;
-}
-
-#docsearch>button:hover {
-  box-shadow: unset;
-}
-
-/* Navigation section end */
