--- a/src/includes/footer.ejs
+++ b/src/includes/footer.ejs
@@ -203,7 +203,7 @@
     </div>
     <div class="footer__wrapper-bottom">
       <div class="footer__wrapper-bottom-logo">
-        <svg height="32" viewBox="0 0 180 32" width="188" class="w-svg" xmlns="http://www.w3.org/2000/svg"
+        <svg viewBox="0 0 180 32" class="w-svg" xmlns="http://www.w3.org/2000/svg"
           aria-labelledby="headerBrowserStackLogoImgTitle headerBrowserStackLogoImgDesc" role="img">
           <title id="headerBrowserStackLogoImgTitle">BrowserStack Logo</title>
           <desc id="headerBrowserStackLogoImgDesc">An illustration of BrowserStack Logo</desc>
