--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -119,7 +119,7 @@
         <li><a class="navigation-link <%= activeLink('/about') %>" href="/about/community/">Community</a></li>
         <li><a class="navigation-link <%= activeLink('/blog') %>" href="/blog/">Blog</a></li>
       </ul>
-      <ul class="navigation-list">
+      <ul class="navigation-list social">
         <li>
           <div id="docsearch">
             <svg role="img" width="20" height="20" viewBox="0 0 20 20">
