--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -3195,7 +3195,7 @@ function activeLink(urlPart) {
 
     <%- include('utils') %>
     <script type="module" src="<%= url("~/src/js/dropdown.js") %>"></script>
-    <script src="/js/landing/script.js"></script>
+    <script type="module" src="<%= url("~/src/js/landing.js") %>"></script>
   </body>
 
   </html>
