--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,13 +44,14 @@ a {
   top: 0;
   /* TODO: remove z-index and fix natively */
   z-index: 100;
+  border-bottom: 1px solid hsl(270, 8%, 90.2%);
 }
 
 /* Navigation section start */
 .navigation__logo {
   width: 242px;
   margin-right: auto;
-  padding: 14px 0;
+  padding: 10px 0;
 }
 
 .navigation__logo svg {
@@ -67,38 +68,20 @@ a {
   max-width: min(1400px, 90%);
 }
 
-.navigation-list-pages {
-  align-items: center;
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navigation-list-pages .navigation-link {
-  color: var(--header-text-color);
-  font-size: initial;
-  font-weight: 600;
-  line-height: var(--line-height-19);
+.navigation-link:hover, a.navigation-link.active {
   text-decoration: none;
-  padding: 28px 26px 28px 26px;
+  border-bottom: 2px solid var(--button-border-accent-color);
+  color: var(--header-text-color)
 }
 
-.navigation-link:hover {
-  color: var(--header-text-color);
-  text-decoration: underline;
-  text-underline-offset: 4px;
-}
-
-a.navigation-link.active {
-  text-decoration: underline;
-  text-underline-offset: 4px;
+.navigation-list.social .navigation-link {
+  border: 0;
 }
 
 .navigation-list {
   align-items: center;
   display: flex;
-  gap: 52px;
+  gap: 10px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -106,10 +89,11 @@ a.navigation-link.active {
 
 .navigation-link {
   color: var(--header-text-color);
-  font-size: initial;
+  font-size: 15px;
   font-weight: 600;
   line-height: var(--line-height-19);
   text-decoration: none;
+  padding: 28px 16px 25px 16px;
 }
 
 .navigation-list>li>a svg {
@@ -120,7 +104,7 @@ a.navigation-link.active {
 
 .navigation-list:last-of-type {
   gap: 32px;
-  padding-left: 50px;
+  padding-left: 52px;
 }
 
 .navigation-list>li button {
