--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -60,7 +60,7 @@
 
 .navigation-link {
   color: var(--header-text-color);
-  font-size: 15px;
+  font-size: initial;
   font-weight: 600;
   line-height: var(--line-height-19);
   text-decoration: none;
